@@ -5,8 +5,6 @@ import com.dmdev.http.dto.TicketDto;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 public class TicketService {
 
     private static final TicketService INSTANCE = new TicketService();
@@ -18,12 +16,12 @@ public class TicketService {
 
     public List<TicketDto> findAllByFlightId(Long flightId) {
         return ticketDao.findAllByFlightId(flightId).stream()
-                .map(ticket -> new TicketDto(
-                        ticket.getId(),
-                        ticket.getFlightId(),
-                        ticket.getSeatNo()
-                ))
-                .collect(toList());
+                .map(ticket -> TicketDto.builder()
+                        .id(ticket.getId())
+                        .flightId(ticket.getFlightId())
+                        .seatNo(ticket.getSeatNo())
+                        .build())
+                .toList();
     }
 
     public static TicketService getInstance() {
